# minesweeper

./: CMakeLists.txt  resources.qrc
src/: main.cpp
